--- a/src/components/LocaleSuggest.astro
+++ b/src/components/LocaleSuggest.astro
@@ -11,9 +11,9 @@ const currentLocale = Astro.currentLocale as Lang
 
 <div
 	id="js-languageSuggest"
-	class="fixed top-0 w-full z-50 text-lg hidden bg-accent dark:bg-accent-dark"
+	class="bg-accent dark:bg-accent-dark fixed top-0 z-50 hidden w-full text-lg"
 >
-	<div class="app-container flex justify-center items-center py-3 relative">
+	<div class="app-container relative flex items-center justify-center py-3">
 		<a
 			id="js-link"
 			href="#"
