--- a/src/components/NavbarLink.astro
+++ b/src/components/NavbarLink.astro
@@ -21,9 +21,9 @@ const isActive =
 	@reference "@/styles/global.css";
 
 	a {
-		@apply decoration-wavy underline-offset-4 hover:underline relative decoration-2 decoration-accent dark:decoration-accent-dark;
+		@apply decoration-accent dark:decoration-accent-dark relative decoration-wavy decoration-2 underline-offset-4 hover:underline;
 	}
 	a.active {
-		@apply underline decoration-accent dark:decoration-accent-dark;
+		@apply decoration-accent dark:decoration-accent-dark underline;
 	}
 </style>
