--- a/src/components/ProgressBar.astro
+++ b/src/components/ProgressBar.astro
@@ -8,7 +8,7 @@ const isPost = /^\/[^/]+\/posts\//.test(currentPath)
 		<div id="progress-container">
 			<div
 				id="progress-bar"
-				class="h-[4px] w-[0%] bg-primary dark:bg-primary-dark transition"
+				class="bg-primary dark:bg-primary-dark h-[4px] w-[0%] transition"
 			/>
 		</div>
 	)
