--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -29,7 +29,7 @@ import '@fontsource-variable/cascadia-code'
 		<BaseHead title={title} description={description} />
 	</head>
 	<body
-		class="text-foreground bg-background font-light dark:text-foreground-dark dark:bg-background-dark transition-colors"
+		class="text-foreground bg-background dark:text-foreground-dark dark:bg-background-dark font-light transition-colors"
 	>
 		<Header title={SITE_TITLE} transition:animate="none" />
 		<LocaleSuggest />
