--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -27,25 +27,25 @@ for (const heading of headings) {
 
 {
 	toc.length > 0 ? (
-		<nav class="py-12 rounded">
-			<h2 class="text-2xl mr-2 pb-1 mb-3 font-bold">
+		<nav class="rounded py-12">
+			<h2 class="mr-2 mb-3 pb-1 text-2xl font-bold">
 				{t({ es: 'En Esta Página', gl: 'Nesta Páxina', en: 'On This Page' })}
 			</h2>
 			<ul class="space-y-3">
 				{toc.map((h2) => (
 					<li>
 						<a
-							class="hover:text-secondary hover:font-semibold underline-offset-4"
+							class="hover:text-secondary underline-offset-4 hover:font-semibold"
 							href={`#${h2.slug}`}
 						>
 							{h2.text}
 						</a>
 						{h2.children.length > 0 && (
-							<ul class="ml-4 mt-2 space-y-2 pl-4">
+							<ul class="mt-2 ml-4 space-y-2 pl-4">
 								{h2.children.map((h3) => (
 									<li>
 										<a
-											class="hover:text-secondary hover:font-medium underline-offset-4 text-sm opacity-80"
+											class="hover:text-secondary text-sm underline-offset-4 opacity-80 hover:font-medium"
 											href={`#${h3.slug}`}
 										>
 											{h3.text}
