--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -38,7 +38,7 @@ const animationTexts = JSON.stringify([
 ---
 
 <h1
-	class="text-8xl font-bold leading-none blog-title font-serif"
+	class="blog-title font-serif text-8xl leading-none font-bold"
 	data-animation-texts={animationTexts}
 >
 	{
@@ -50,10 +50,6 @@ const animationTexts = JSON.stringify([
 	}
 </h1>
 <style>
-	.blog-title {
-		height: 100%;
-	}
-
 	:global(.cursor) {
 		animation: blink 0.5s steps(1) infinite;
 	}
