--- a/src/pages/[lang]/locale.astro
+++ b/src/pages/[lang]/locale.astro
@@ -24,7 +24,10 @@ export const getStaticPaths = () =>
 						<a
 							class="item-center decoration-primary dark:decoration-primary-dark text-4xl decoration-wavy underline-offset-4 hover:underline"
 							href={`${SITE_BASE}/${lang}/`}
-							data-umami-event={`${config.label} Locale Change`}
+							data-umami-event={`Locale Change`}
+							data-umami-event-lang-to={lang}
+							data-umami-event-lang-from={Astro.currentLocale}
+							data-umami-event-source="locale-page"
 						>
 							{config.emogi} {config.label}
 						</a>
