fix: change Read All Link for See All Link

--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -93,7 +93,7 @@ const newArtDate = blog.reduce(
 		<a
 			class="btn-secondary"
 			href={`/${locale}/posts`}
-			data-umami-event="Read All Link"
+			data-umami-event="See All Posts Link"
 			>{t({ es: 'Ver Más', gl: 'Ver Mais', en: 'See More' })}
 			<Icon size={20} name="mdi:arrow-right" />
 		</a>
